# mkdocs-lcars

./: mkdocs.yaml  pyproject.toml
mkdocs_lcars/: main.html  mkdocs_theme.yml
mkdocs_lcars/css/: lcars.css
